Fixed image alignment

--- a/styling.css
+++ b/styling.css
@@ -4,7 +4,8 @@ body {
 }
 
 .center {
-    margin: auto;
-    width: 95%;
-    max-width: 300pt;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%
 }
